# Doors-RAG

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.frontend  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  pyproject.toml  requirements_docker.txt  start.bat  start.sh
backend/: config.py  main.py
backend/api/: endpoints.py  models.py
backend/monitoring/: metrics.py
backend/processing/: chunker.py  metadata_extractor.py  pdf_extractor.py
backend/rag/: chain.py  confidence_scorer.py  door_parser.py  embeddings.py  entity_extractor.py  hybrid_embeddings.py  retriever.py
backend/scripts/: process_pdfs.py
config/: settings.py
frontend/: app.py
prompts/: prompt_enhanced.md  prompt_implementation_guide.md
scripts/: process_pdfs.py  test_queries.py
tests/: test_api.py  test_extraction.py  test_retrieval.py
